# WOW-Classic-EPGP-Discord-Bot

./: .breakpoints  .gitignore  CNAME  READM.md  README.md  admin.py  buildstart.sh  cfg.py  constant.py  distribute.py  emojis.py  epgp.json  epgp.txt  epgp1.json  epgp_archive.json  epgp_keyfile.json  gsheet.py  history.html  history.py  index.html  loot.html  loot.json  loot.py  loot.txt  main.py  pyproject.toml  raid.py  raider.py  requirements.txt  settings.json  source.py  start.sh  user.py  util.py  view.py
command/: admin_command.py  raider_command.py
infra/: gsheet.py  source.py
menu_callback/: epgp_callback.py  loot_callback.py  menu_callback.py  raider_callback.py  system_callback.py
static/: history.html  index.html  loot.html  wow.css
view/: view.py
view/button/: admin_button.py  loot_button.py
view/embed/: admin_embed.py  loot_embed.py  raider_embed.py
view/menu/: epgp_menu.py  loot_menu.py  main_menu.py  menu.py  raider_menu.py  system_menu.py
wcl/: query.py  wcl.py  wcl_object.py
