[tool.poetry]
name = "repl_python3_EPGP"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
discord-components = "^2.1.2"
oauth2client = "^4.1.3"
pandas = "^1.3.4"
gspread = "^4.0.1"
django-user = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
